<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".views.fragments.ReadyToStartFragment">

    <TextView
        android:id="@+id/txt_emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="78sp"
        android:textColor="@color/black"
        android:text="@string/happy_emoji_close_eyes" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/dark_green"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/ready" />

    <TextView
        android:id="@+id/txt_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textColor="@color/dark_green"
        android:text="@string/ready_description" />

    <Button
        android:id="@+id/btn_start"
        android:layout_marginTop="32dp"
        android:text="@string/start"
        app:backgroundTint="@null"
        style="@style/PlantManagerButtonStyle" />

</LinearLayout>