<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="32dp"
    android:paddingVertical="32dp">

    <ImageView
        android:id="@+id/img_plant_dialog"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txt_confirm_delete"
        style="@style/PlantManagerTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/img_plant_dialog"
        app:layout_constraintStart_toStartOf="@id/img_plant_dialog"
        app:layout_constraintTop_toBottomOf="@id/img_plant_dialog"
        android:text="@string/delete_confirm"
        tools:text="Deseja mesmo deletar sua\nZamioculca?" />

    <Button
        android:id="@+id/btn_dialog_cancel"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/txt_confirm_delete"
        app:layout_constraintStart_toStartOf="@id/txt_confirm_delete"
        android:textColor="@color/dark_green"
        app:backgroundTint="@null"
        android:text="@string/cancel"
        style="@style/PlantManagerDialogButtonStyle" />

    <Button
        android:id="@+id/btn_dialog_confirm"
        app:layout_constraintEnd_toEndOf="@id/txt_confirm_delete"
        app:layout_constraintTop_toTopOf="@id/btn_dialog_cancel"
        android:textColor="@color/candy"
        app:backgroundTint="@null"
        android:text="@string/delete"
        style="@style/PlantManagerDialogButtonStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>